# python-docker

./: .env.example  Dockerfile  compose.dev.yaml  compose.yaml  index.py  pyproject.toml  readme.md  requirements.txt
